# galaxy

./: .gitignore  Cargo.toml
assets/: density_wave.json  galaxy_settings.json
src/: main.rs
src/app_plugin/: components.rs  density_wave.rs  density_wave_resource.rs  dust_fade_system.rs  galaxy_setting_component.rs  lod_setting_resource.rs  mod.rs  setup_system.rs  star_component.rs  stars_lod_system.rs  systems.rs  update_color_system.rs  update_stars_system.rs  update_transform_system.rs
src/app_ui_plugin/: components.rs  mod.rs  settings_ui_system.rs  setup_system.rs  statistics_system.rs
src/pan_cam/: mod.rs
